--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:theme": "esbuild src/theme.ts --outdir=static --bundle --minify --platform=browser --format=iife",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"dependencies": {
+		"lucide-svelte": "^0.263.0"
+	},
 	"devDependencies": {
 		"@catppuccin/tailwindcss": "^0.1.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/node": "^20.4.5",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
 		"autoprefixer": "^10.4.14",
+		"esbuild": "^0.18.17",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -32,8 +38,5 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module",
-	"dependencies": {
-		"lucide-svelte": "^0.263.0"
-	}
+	"type": "module"
 }
