--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"devDependencies": {
 		"@catppuccin/tailwindcss": "^0.1.6",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/node": "^20.4.5",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -36,7 +36,8 @@
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"yaml": "^2.3.1"
 	},
 	"type": "module"
 }
