--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
+		"vite-imagetools": "^5.0.5",
 		"yaml": "^2.3.1"
 	},
 	"type": "module"
