--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
+		"@catppuccin/palette": "^0.2.0",
 		"fuse.js": "^6.6.2",
 		"lucide-svelte": "^0.263.0"
 	},
