--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .DS_Store
-node_modules
-/build
-/.svelte-kit
+
+node_modules/
+.svelte-kit/
+.vercel/
+
 /package
+
 .env
 .env.*
 !.env.example
+
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
