--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
 	"dependencies": {
 		"@catppuccin/palette": "^0.2.0",
 		"fuse.js": "^6.6.2",
-		"lucide-svelte": "^0.263.0"
+		"lucide-svelte": "^0.284.0"
 	},
 	"devDependencies": {
 		"@catppuccin/tailwindcss": "^0.1.6",
-		"@sveltejs/adapter-vercel": "^3.0.2",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/node": "^20.4.5",
-		"@typescript-eslint/eslint-plugin": "^6.2.0",
-		"@typescript-eslint/parser": "^6.2.0",
-		"autoprefixer": "^10.4.14",
-		"esbuild": "^0.18.17",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.24",
+		"@sveltejs/adapter-vercel": "^3.0.3",
+		"@sveltejs/kit": "^1.25.1",
+		"@types/node": "^20.8.2",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"autoprefixer": "^10.4.16",
+		"esbuild": "^0.19.4",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.34.0",
+		"postcss": "^8.4.31",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.0",
-		"prettier-plugin-svelte": "^3.0.0",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"vite-imagetools": "^5.0.5",
-		"yaml": "^2.3.1"
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.10",
+		"vite-imagetools": "^5.0.8",
+		"yaml": "^2.3.2"
 	},
-	"type": "module"
+	"type": "module",
+	"packageManager": "pnpm@8.8.0"
 }
